--- a/Kernel/UnitTest/makefile.debug.makegen
+++ b/Kernel/UnitTest/makefile.debug.makegen
@@ -15,8 +15,8 @@ targets
 
 map cpp : %.cpp
 	> o : obj %.o
-	g++ -std=c++11 -g -o $(OUT) -c $(IN)
+	g++ -std=c++11 -g -fprofile-arcs -ftest-coverage -o $(OUT) -c $(IN)
 
 link o :
 	> exe : bin UnitTest 
-	g++ -std=c++11 -g -o $(OUT) $(IN)
+	g++ -std=c++11 -fprofile-arcs -o $(OUT) $(IN)
