--- a/Kernel/UnitTest/makefile
+++ b/Kernel/UnitTest/makefile
@@ -1,4 +1,4 @@
-# This file is generated from "./makefile.debug.makegen" by Vczh Makefile Generator
+# This file is generated from "./makefile.debug-lock.makegen" by Vczh Makefile Generator
 
 # Config
 .PHONY : all clean
@@ -9,12 +9,12 @@ obj_TARGET = ././Obj/
 
 # Folders
 DATABASE_BASIC_DIR = ./../Source/./
-DATABASE_BASIC_h = $(DATABASE_BASIC_DIR)DatabaseVlppReference.h
+DATABASE_BASIC_h = $(DATABASE_BASIC_DIR)DatabaseVlppReferences.h
 DATABASE_UTILITY_DIR = ./../Source/./Utility/
 DATABASE_UTILITY_cpp = $(wildcard $(DATABASE_UTILITY_DIR)*.cpp)
 DATABASE_UTILITY_h = $(wildcard $(DATABASE_UTILITY_DIR)*.h)
 UNITTEST_DIR = ././
-UNITTEST_cpp = $(wildcard $(UNITTEST_DIR)*.cpp)
+UNITTEST_cpp = $(UNITTEST_DIR)Main.cpp $(UNITTEST_DIR)TestUtility_Lock.cpp
 UNITTEST_h = $(wildcard $(UNITTEST_DIR)*.h)
 VLPP_DIR = ./../Source/./
 VLPP_cpp = $(VLPP_DIR)Vlpp.cpp
