Refactor IdObject<T>; Refactor BufferManager; Update Vczh Library++ files

--- a/Kernel/UnitTest/makefile.debug-lock.makegen
+++ b/Kernel/UnitTest/makefile.debug-lock.makegen
@@ -19,4 +19,4 @@ map cpp : %.cpp
 
 link o :
 	> exe : bin UnitTest 
-	g++ -std=c++11 -fprofile-arcs -o $(OUT) $(IN)
+	g++ -std=c++11 -fprofile-arcs -pthread -o $(OUT) $(IN)
