--- a/Kernel/UnitTest/makefile.debug-clang.makegen
+++ b/Kernel/UnitTest/makefile.debug-clang.makegen
@@ -19,4 +19,4 @@ map cpp : %.cpp
 
 link o :
 	> exe : bin UnitTest 
-	clang++ -std=c++11 -fprofile-arcs -o $(OUT) $(IN)
+	clang++ -std=c++11 -fprofile-arcs -pthread -o $(OUT) $(IN)
