Fuck clang++ 3.4-1ubuntu3 who will crash if I write 'volatile vint intentAcquireCounter = 0;' instead of putting the '0' in the constructor.

--- a/Kernel/UnitTest/makefile
+++ b/Kernel/UnitTest/makefile
@@ -1,4 +1,4 @@
-# This file is generated from "./makefile.debug.makegen" by Vczh Makefile Generator
+# This file is generated from "./makefile.debug-clang.makegen" by Vczh Makefile Generator
 
 # Config
 .PHONY : all clean
@@ -28,7 +28,7 @@ VLPP_o = $(patsubst $(VLPP_DIR)%.cpp, $(obj_TARGET)%.o, $(VLPP_cpp))
 # All
 ALL_o = $(DATABASE_UTILITY_o) $(VLPP_o) $(UNITTEST_o)
 all : $(ALL_o)
-	g++ -std=c++11 -fprofile-arcs -pthread -o $(bin_TARGET)UnitTest  $(ALL_o)
+	clang++ -std=c++11 -pthread -o $(bin_TARGET)UnitTest  $(ALL_o)
 
 # Dependencies
 # $(DATABASE_BASIC_h) : $(VLPP_h)
@@ -40,11 +40,11 @@ all : $(ALL_o)
 
 # Rules
 $(DATABASE_UTILITY_o) : $(obj_TARGET)%.o : $(DATABASE_UTILITY_DIR)%.cpp $(DATABASE_BASIC_h) $(DATABASE_UTILITY_h) $(VLPP_h)
-	g++ -std=c++11 -g -fprofile-arcs -ftest-coverage -o $@ -c $<
+	clang++ -std=c++11 -g -o $@ -c $<
 $(VLPP_o) : $(obj_TARGET)%.o : $(VLPP_DIR)%.cpp $(VLPP_h)
-	g++ -std=c++11 -g -fprofile-arcs -ftest-coverage -o $@ -c $<
+	clang++ -std=c++11 -g -o $@ -c $<
 $(UNITTEST_o) : $(obj_TARGET)%.o : $(UNITTEST_DIR)%.cpp $(DATABASE_BASIC_h) $(DATABASE_UTILITY_h) $(UNITTEST_h) $(VLPP_h)
-	g++ -std=c++11 -g -fprofile-arcs -ftest-coverage -o $@ -c $<
+	clang++ -std=c++11 -g -o $@ -c $<
 
 # Clean
 clean:
