--- a/Kernel/UnitTest/makefile
+++ b/Kernel/UnitTest/makefile
@@ -1,4 +1,4 @@
-# This file is generated from "./makefile.debug-lock.makegen" by Vczh Makefile Generator
+# This file is generated from "./makefile.debug-clang.makegen" by Vczh Makefile Generator
 
 # Config
 .PHONY : all clean
@@ -14,7 +14,7 @@ DATABASE_UTILITY_DIR = ./../Source/./Utility/
 DATABASE_UTILITY_cpp = $(wildcard $(DATABASE_UTILITY_DIR)*.cpp)
 DATABASE_UTILITY_h = $(wildcard $(DATABASE_UTILITY_DIR)*.h)
 UNITTEST_DIR = ././
-UNITTEST_cpp = $(UNITTEST_DIR)Main.cpp $(UNITTEST_DIR)TestUtility_Lock.cpp
+UNITTEST_cpp = $(wildcard $(UNITTEST_DIR)*.cpp)
 UNITTEST_h = $(wildcard $(UNITTEST_DIR)*.h)
 VLPP_DIR = ./../Source/./
 VLPP_cpp = $(VLPP_DIR)Vlpp.cpp
@@ -28,7 +28,7 @@ VLPP_o = $(patsubst $(VLPP_DIR)%.cpp, $(obj_TARGET)%.o, $(VLPP_cpp))
 # All
 ALL_o = $(DATABASE_UTILITY_o) $(VLPP_o) $(UNITTEST_o)
 all : $(ALL_o)
-	g++ -std=c++11 -fprofile-arcs -pthread -o $(bin_TARGET)UnitTest  $(ALL_o)
+	clang++ -std=c++11 -pthread -o $(bin_TARGET)UnitTest  $(ALL_o)
 
 # Dependencies
 # $(DATABASE_BASIC_h) : $(VLPP_h)
@@ -40,11 +40,11 @@ all : $(ALL_o)
 
 # Rules
 $(DATABASE_UTILITY_o) : $(obj_TARGET)%.o : $(DATABASE_UTILITY_DIR)%.cpp $(DATABASE_BASIC_h) $(DATABASE_UTILITY_h) $(VLPP_h)
-	g++ -std=c++11 -g -fprofile-arcs -ftest-coverage -o $@ -c $<
+	clang++ -std=c++11 -g -o $@ -c $<
 $(VLPP_o) : $(obj_TARGET)%.o : $(VLPP_DIR)%.cpp $(VLPP_h)
-	g++ -std=c++11 -g -fprofile-arcs -ftest-coverage -o $@ -c $<
+	clang++ -std=c++11 -g -o $@ -c $<
 $(UNITTEST_o) : $(obj_TARGET)%.o : $(UNITTEST_DIR)%.cpp $(DATABASE_BASIC_h) $(DATABASE_UTILITY_h) $(UNITTEST_h) $(VLPP_h)
-	g++ -std=c++11 -g -fprofile-arcs -ftest-coverage -o $@ -c $<
+	clang++ -std=c++11 -g -o $@ -c $<
 
 # Clean
 clean:
